# r82labs-analytics

./: .buildinfo  README.md  api.html  genindex.html  index.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: build-test-tag.yml  docs-actions.yml  main-branch-actions.yml  pr-actions.yml  python-app.yml  release.yml  shared-ci.yml  test-actions.yml
_sources/: index.rst.txt  notebooks.rst.txt  usage.rst.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/notebooks/: data_cleaning.ipynb
notebooks/: data_cleaning.html  data_cleaning.ipynb
src/r82labs_analytics/: __init__.py  data_cleaning.py
tests/: conftest.py  test_data_cleaning.py
